<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rotulo_detalhes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nutrientesbio.View.RotuloDetalhes">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Voltar"
                android:id="@+id/buttonVoltaMain"
                android:onClick="voltaRotulos"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/colorCancel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Informação sobre Rótulos"
                android:id="@+id/textView2"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:fillViewport="true"
            android:layout_weight="82.03">



            <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

                <TextView
                android:text="Medida Caseira:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="22dp"
                android:textStyle="bold"
                />

            <TextView
                android:text="@string/medida_caseira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <TextView
                android:text="Porção:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="22dp"
                android:textStyle="bold"
                />

                <TextView
                    android:text="@string/porcao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" />

                <TextView
                android:text="%VD:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textSize="22dp"
                android:textStyle="bold"
                />

            <TextView
                android:text="@string/vd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />

            <TextView
                android:text="Lista de Ingredientes:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:textSize="22dp"
                android:textStyle="bold"
                />

            <TextView
                android:text="@string/lista_ingre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" />


        <TextView
            android:text="Origem:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="22dp"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/origem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" />

        <TextView
            android:text="Prazo de Validade:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            android:textSize="22dp"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/prazo_validade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" />

        <TextView
            android:text="Conteúdo Líquido:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textSize="22dp"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/conteudo_liq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView16" />

        <TextView
            android:text="Lote:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textSize="22dp"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/lote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" />

        <TextView
            android:text="Informação Nutricional:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:textSize="22dp"
            android:textStyle="bold"
            />

        <TextView
            android:text="@string/info_nutri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView20" />


        <TextView
            android:text="Fonte: www.anvisa.gov.br"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

    </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>